k8s/base/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nession-server
  labels:
    app: nession
    component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nession
      component: server
  template:
    metadata:
      labels:
        app: nession
        component: server
    spec:
      containers:
        - name: nession-server
          image: ghcr.io/bestnathan/nession-server:main
          imagePullPolicy: Always
          ports:
            - containerPort: 10080
              name: http
            - containerPort: 18080
              name: server-ws
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /health
              port: 10080
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 10080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
      imagePullSecrets:
        - name: ghcr-bestnathan
      volumes:
        - name: data
          emptyDir: {}
