k8s/base/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: nession-ui
spec:
  selector:
    app: nession
    component: ui
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
